--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,9 @@
             android:name=".SettingsActivity"
             android:label="@string/title_activity_setting"
             android:parentActivityName=".MainActivity" >
-
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.android.sunshine.MainActivity" />
         </activity>
     </application>
 
